- 

    New feature: Skipped notifications when not dispatching on submit.
    Means that if you let a cronjob send the notifications instead of
    immediately sending them, some notifications are cancelled if the
    people who are email have already followed up. (Real#0686)
    
    Bug fixed: rss.xml and rdf.xml weren't protected by the View
    permission. (Real#0695, thanks Jesse Perry)
    
    Bug fixed: Changed default encoding from "utf8" to "utf-8" to make
    sure older IEs gets it right.

    Bug fixed: Header in CSV file for "ID" replaced by "Issue ID"
    (Real#0687)

    Bug fixed: Clairvoyant AJAX checks' interval increases now slowly as
    the page gets older.
    
    Bug fixed: Issues were uncataloged twice when deleting causing a
    harmless extra message in the event log.
    
- 0.8.3

    Bug fixed: Clairvoyant javascript alert on followups would repeat
    the same message over and over (almost blinking).

    New feature: Name and email is saved in a cookie when working on a
    draft if the name/email isn't already set.

    Change: If in DEBUG mode (environment variable
    DEBUG_ISSUETRACKERPRODUCT) emails are printed to stdout
    
- 0.8.2

    Bug fixed: Error on duplicate in on second followups in issues.
    Real#0665 and Real#0666
    
- 0.8.1 

    Bug fixed: The clarvoyent AJAX feature would show if someone is
    working a different issue to the one you're looking at.
    
- 0.8.0

    New feature: Ability to compare issues (experimental). Only works
    when using keyboard shortcuts. Key: c
    
    New feature: Now you can assign an issue to anybody even after
    it's been created and even if it didn't already have an assignment.
    Real#0299, Real#0188, Real#0081
    
    Bug fixed: Sending assignment emails from a user with non-ASCII
    name would cause an UnicodeDecodeError.

    New feature: Uses jQuery 1.2.1
    
    Bug fixed: Cancelling a go-to-issue keyboard command caused a
    Javascript error.
    